--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -68,6 +68,7 @@
             position: fixed;
             bottom: 0;
             width: 100%;
+            margin-top: 50px;
         }
          /* postbody */
         #postbody { 
@@ -88,7 +89,6 @@
     bottom: 0;
     width: 100%;
     box-sizing: border-box;
-    margin-top: 5px
 }
 
 .bottom-nav a {
@@ -232,7 +232,7 @@
 
     <!-- Footer -->
     
-
+<footer>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
     <!-- Bottom Navigation with Icons Only -->
@@ -270,5 +270,6 @@
   const app = initializeApp(firebaseConfig);
   const analytics = getAnalytics(app);
 </script>
+</footer>
 </body>
 </html>
