--- a/index.html
+++ b/index.html
@@ -208,7 +208,52 @@
         <p>Stay informed about our upcoming events and initiatives by following our social media channels and subscribing to our newsletter.</p>
         <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
     </div>
-    
+    <section class="hero bg-dark text-white text-center py-5">
+  <div class="container">
+    <h1 class="display-4 fw-bold mb-4">Empowering Youth. Uplifting Lives.</h1>
+    <p class="lead mb-4">
+      At <strong>Youth Spring</strong>, we believe every young person in Nigeria deserves access to opportunity, education, and dignity.
+      Our mission is to uplift the helpless, equip students, and empower the youth for a future they can be proud of.
+    </p>
+    <a href="#join" class="btn btn-warning btn-lg rounded-pill">Join the Movement</a>
+  </div>
+</section>
+
+<section class="vision-mission py-5 bg-light text-center">
+  <div class="container">
+    <h2 class="fw-bold mb-4">Our Vision</h2>
+    <p class="fs-5 mb-5">
+      To be a beacon of hope for Nigerian youth, fostering growth, innovation, and transformation through accessible support systems.
+    </p>
+    <h2 class="fw-bold mb-4">Our Mission</h2>
+    <p class="fs-5">
+      Youth Spring is committed to:
+      <ul class="list-unstyled fs-5">
+        <li>• Providing financial aid and educational tools to underprivileged students</li>
+        <li>• Creating opportunities for skill development and entrepreneurship</li>
+        <li>• Supporting helpless individuals through targeted community programs</li>
+        <li>• Inspiring a culture of collaboration, kindness, and national transformation</li>
+      </ul>
+    </p>
+  </div>
+</section>
+
+<section class="call-to-action bg-warning text-dark text-center py-5" id="join">
+  <div class="container">
+    <h3 class="fw-bold mb-3">Be Part of the Change</h3>
+    <p class="fs-5 mb-4">We are launching soon. Join early supporters and help us build a stronger future for Nigerian youth.</p>
+    <a href="#contact" class="btn btn-dark btn-lg rounded-pill">Support Now</a>
+  </div>
+</section>
+
+<section class="quote-section py-5 text-center text-white" style="background: #222;">
+  <div class="container">
+    <blockquote class="blockquote fs-4">
+      “What God cannot do does not exist.”
+    </blockquote>
+    <footer class="blockquote-footer text-white-50 mt-2">A Guiding Truth at Youth Spring</footer>
+  </div>
+</section>
 
     <!-- Footer -->
     
