--- a/index.html
+++ b/index.html
@@ -11,146 +11,196 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="6WklvarGbFY1As2HuzE4Rd0ENBWF6Hh9gDk-69yQ_mc" />
     <title>Youth Spring - Empowering Nigerian Youth</title>
     <meta name="description" content="Youth Spring is a Nigerian NGO focused on empowering youth, providing interest-free loans, skill training, scholarships, and community development programs.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet" />
-    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet" />
     <link rel="stylesheet" href="effects/effects.css">
-    <link rel="apple-touch-icon" sizes="76x76" href="dashboard/assets/img/favicon.png">
     <link rel="icon" type="image/png" href="dashboard/assets/img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <style>
+        :root {
+            --primary: #ff9800;
+            --primary-dark: #e65100;
+            --secondary: #1976d2;
+            --background: #f5f7fa;
+            --surface: #faf3dd;
+            --highlight: #fff3e0;
+            --text-main: #222;
+            --text-light: #fff;
+        }
         body {
-            font-family: Arial, sans-serif;
-            background-color: #fdf6e3;
-            color: #333;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background-color: var(--background);
+            color: var(--text-main);
             margin: 0;
             padding: 0;
             min-height: 100vh;
         }
         #header {
-            background-color: #ffcc33;
-            padding: 15px;
+            background: var(--secondary);
+            padding: 18px 0 10px 0;
             text-align: center;
+            color: var(--text-light);
             font-weight: bold;
+            font-size: 1.25em;
+            letter-spacing: 1px;
+        }
+        #header a {
+            color: var(--primary);
+            text-decoration: underline;
+            font-weight: 500;
         }
         .hero {
-            background: linear-gradient(to right, #ffcc33, #ff9933);
-            color: white;
+            background: linear-gradient(90deg, var(--primary) 60%, var(--secondary) 100%);
+            color: var(--text-light);
             text-align: center;
-            padding: 80px 20px;
+            padding: 70px 20px 40px 20px;
+            position: relative;
         }
         .hero h1 {
-            font-size: 2em;
+            font-size: 2.5em;
             font-weight: bold;
+            margin-bottom: 0.15em;
+        }
+        .hero .subtitle {
+            font-size: 1.35em;
+            font-weight: 500;
+            margin-bottom: 18px;
+            color: #ffe0b2;
+            letter-spacing: 0.5px;
         }
         .hero p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
+            font-size: 1.15em;
+            margin-bottom: 24px;
         }
         .btn-donate {
-            background-color: #ff6600;
-            color: white;
-            padding: 10px 20px;
-            font-size: 1.2em;
+            background-color: var(--secondary);
+            color: var(--text-light);
+            padding: 10px 24px;
+            font-size: 1.15em;
             border-radius: 5px;
             text-decoration: none;
+            font-weight: 600;
+            transition: background 0.2s;
+            border: none;
         }
         .btn-donate:hover {
-            background-color: #cc5500;
+            background-color: var(--primary-dark);
         }
         #postbody { 
-            font-size: 1.2em;
+            font-size: 1.15em;
             text-align: center;
             margin-bottom: 70px;
+            background: var(--surface);
+            border-radius: 12px;
+            padding: 32px 10px 25px 10px;
+            box-shadow: 0 3px 12px rgba(33,33,33,0.07);
+        }
+        .vision-mission {
+            background: var(--highlight);
+        }
+        .vision-mission h2 {
+            color: var(--primary);
+        }
+        .vision-mission ul li {
+            margin-bottom: 0.5em;
+        }
+        .call-to-action {
+            background: var(--primary);
+            color: var(--text-light);
+        }
+        .call-to-action .btn {
+            background: var(--secondary);
+            border: none;
+        }
+        .quote-section {
+            background: var(--secondary);
+            color: var(--text-light);
+            padding: 40px 0;
+        }
+        .blockquote-footer {
+            color: #90caf9 !important;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 16px auto;
+            border-radius: 8px;
         }
         .bottom-nav {
             display: flex;
             justify-content: center;
             align-items: center;
             gap: 32px;
-            background-color: #fdf6e3; 
-            padding: 10px 0;
+            background-color: var(--surface);
+            padding: 12px 0;
             position: fixed;
             bottom: 0;
             width: 100%;
             box-sizing: border-box;
             z-index: 1030;
+            border-top: 1px solid #eee;
         }
         .bottom-nav a {
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 60px;
-            height: 60px;
-            background-color: #ff6600;
-            color: white;
-            border-radius: 40%;
+            width: 54px;
+            height: 54px;
+            background-color: var(--primary);
+            color: var(--text-light);
+            border-radius: 50%;
             text-decoration: none;
             font-size: 1.5em;
+            transition: background 0.2s, color 0.2s;
         }
-        .bottom-nav a:hover {
-            background-color: #cc5500;
+        .bottom-nav a:hover, .bottom-nav a.active {
+            background-color: var(--secondary);
+            color: #ffe0b2;
         }
-        .vision-mission h2, .vision-mission ul {
-            text-align: center;
+        @media (max-width: 600px) {
+            .hero h1 { font-size: 1.5em; }
+            .hero .subtitle { font-size: 1em; }
         }
-        .quote-section {
-            background: #222;
-            color: #fff;
-            padding: 40px 0;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        /* Remove footer as navigation is fixed-bottom */
     </style>
 </head>
 <body>
     <!-- Header -->
     <div id="header">
-        Youth Spring - Empowering Nigerian Youth.
-        <br>
-        <a href="pages/contact.html" style="color: #333; text-decoration: underline;">Contact Us</a>
+        Youth Spring - Empowering Nigerian Youth.<br>
+        <a href="pages/contact.html">Contact Us</a>
     </div>
-
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <img src="image/youthspringNGOs.png" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
-            <h1>Empowering Nigerian Youth & The Helpless</h1>
-            <p>Together, we can create opportunities for a brighter future.</p>
+            <img src="image/youthspringNGOs.png" class="img-fluid mb-3" alt="Empowering Nigerian Youth" style="max-width: 50%; min-width: 180px;">
+            <h1>Youth Spring Initiative</h1>
+            <div class="subtitle">Empowering Youth, Transforming Communities</div>
             <p>
-                "We are launching soon! Be among the first to support Nigeria’s youth. The platform is under construction, but you can join our early supporters now!"
+                Together, we can create opportunities for a brighter future.<br>
+                "We are launching soon! Be among the first to support Nigeria’s youth.<br>
+                The platform is under construction, but you can join our early supporters now!"
             </p>
-            <p>We’re building something BIG for Nigerian youth. Stay tuned!</p>
-            <div class="text-center p-4">
+            <div class="text-center p-3">
                 <h2>🚀<span id="countdown"></span> until we go live!</h2>
             </div>
-            <a href="pages/sign-up.html" class="btn btn-donate btn-lg">Support Our Cause</a>
+            <a href="pages/sign-up.html" class="btn btn-donate btn-lg mt-2">Support Our Cause</a>
         </div>
     </section>
-
     <!-- Main Content -->
-    <div id="postbody" class="container">
+    <div id="postbody" class="container mt-5">
         <p>Our mission is to provide financial assistance, educational resources, and community support to empower the youth of Nigeria.</p>
         <img src="imagelink" class="img-fluid" alt="Empowering Nigerian Youth">
         <p>Join us in our journey to make a significant impact in the lives of young Nigerians.</p>
         <p>Stay informed about our upcoming events and initiatives by following our social media channels and subscribing to our newsletter.</p>
         <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
     </div>
-
     <!-- Vision & Mission -->
-    <section class="vision-mission py-5 bg-light text-center">
+    <section class="vision-mission py-5 text-center">
       <div class="container">
         <h2 class="fw-bold mb-4">Our Vision</h2>
-        <p class="fs-5 mb-5">
+        <p class="fs-5 mb-4">
           To be a beacon of hope for Nigerian youth, fostering growth, innovation, and transformation through accessible support systems.
         </p>
         <h2 class="fw-bold mb-4">Our Mission</h2>
@@ -162,35 +212,31 @@
         </ul>
       </div>
     </section>
-
     <!-- Call to Action -->
-    <section class="call-to-action bg-warning text-dark text-center py-5" id="join">
+    <section class="call-to-action text-center py-5" id="join">
       <div class="container">
         <h3 class="fw-bold mb-3">Be Part of the Change</h3>
         <p class="fs-5 mb-4">We are launching soon. Join early supporters and help us build a stronger future for Nigerian youth.</p>
         <a href="#contact" class="btn btn-dark btn-lg rounded-pill">Support Now</a>
       </div>
     </section>
-
     <!-- Quote Section -->
-    <section class="quote-section py-5 text-center text-white">
+    <section class="quote-section text-center">
       <div class="container">
         <blockquote class="blockquote fs-4">
           “What God cannot do does not exist.”
         </blockquote>
-        <footer class="blockquote-footer text-white-50 mt-2">A Guiding Truth at Youth Spring</footer>
+        <footer class="blockquote-footer mt-2">A Guiding Truth at Youth Spring</footer>
       </div>
     </section>
-
     <!-- Bottom Navigation -->
     <div class="bottom-nav">
-        <a href="index.html" class="text-dark fs-4" title="Home"><i class="bi bi-house-fill"></i></a>
-        <a href="pages/about.html" class="text-dark fs-4" title="About"><i class="bi bi-info-circle-fill"></i></a>
-        <a href="pages/apply-for-loan.html" class="text-dark fs-4" title="Apply for Loan"><i class="bi bi-cash-coin"></i></a>
-        <a href="pages/donate.html" class="text-dark fs-4" title="Donate"><i class="bi bi-heart-fill"></i></a>
-        <a href="pages/programs.html" class="text-dark fs-4" title="Programs"><i class="bi bi-grid-fill"></i></a>
+        <a href="index.html" class="active" title="Home"><i class="bi bi-house-fill"></i></a>
+        <a href="pages/about.html" title="About"><i class="bi bi-info-circle-fill"></i></a>
+        <a href="pages/apply-for-loan.html" title="Apply for Loan"><i class="bi bi-cash-coin"></i></a>
+        <a href="pages/donate.html" title="Donate"><i class="bi bi-heart-fill"></i></a>
+        <a href="pages/programs.html" title="Programs"><i class="bi bi-grid-fill"></i></a>
     </div>
-
     <!-- Scripts -->
     <script>
         const countdown = () => {
