--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             width: 100%;
             box-sizing: border-box;
             z-index: 1030;
+            margin-top: 20px;
         }
         .bottom-nav a {
             display: flex;
