--- a/pages/about.html
+++ b/pages/about.html
@@ -135,6 +135,10 @@
         .bottom-nav a:hover {
             background-color: #cc5500;
         }
+        /* Add extra padding to main content to avoid overlap with bottom nav */
+        main {
+            padding-bottom: 90px;
+        }
     </style>
 </head>
 <body>
@@ -159,13 +163,13 @@
         <!-- About Section -->
         <section id="about">
             <h2>Our Mission</h2>
-            <p>To empower Nigerian youth through targeted programs in education, skill development, financial support, and community engagement — enabling them to realize their fullest potential and become leaders.</p>
+            <p>To empower Nigerian youth through targeted programs in education, skill development, financial support, and community engagement — enabling them to realize their fullest potential and[...]</p>
             
             <h2>Our Vision</h2>
-            <p>A Nigeria where every young person, regardless of background or circumstance, has access to quality education, meaningful opportunities, and the confidence to drive change in their communities and beyond.</p>
+            <p>A Nigeria where every young person, regardless of background or circumstance, has access to quality education, meaningful opportunities, and the confidence to drive change in their comm[...]</p>
             
             <h2>Our Story</h2>
-            <p>Youth Spring NGO emerged from a conversation between a group of passionate graduates and young professionals who recognized the immense talents and challenges facing Nigerian youth. United by a shared vision, we have worked tirelessly to:</p>
+            <p>Youth Spring NGO emerged from a conversation between a group of passionate graduates and young professionals who recognized the immense talents and challenges facing Nigerian youth. Uni[...]</p>
             <ul>
                 <li>Bridge gaps in access to education and vocational training.</li>
                 <li>Foster entrepreneurship and job readiness through mentorship and seed funding.</li>
